--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
-// on place un div de commentaire pour informer l'utilisateur de la requête envoyée et le nombre de données
-// le texte du div est rempli une fois la requete connue
+<!--on place un div de commentaire pour informer l'utilisateur de la requête envoyée et le nombre de données
+le texte du div est rempli une fois la requete connue -->
 <div id="resume_requete">
 
 </div>
