--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ window.location.reload();
 <script>
 var tableau_test = [] ;
 var chaine_modif = localStorage.getItem("filtre_final") ;
-console.log(localStorage.getItem("filtre_comment")) ;
+console.log(localStorage.getItem("comment_final")) ;
 	
 function chargement_donnees()
 {
