--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var tableau_sortie = [] ;
 var string_filtre = '';
 var string_comment_act = '';
 var string_comment_nb_act = '';
-var string_bene = '';	
+var string_comment_bene = '';	
 // fonction appelée par le clique du bouton
 // on stocke tous les filtres saisis par l'utilisateur avant de rafraichier la page
 	
