--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ if (document.getElementById('type_act_' + (i+1)).checked)
 	{if (string_filtre == '')
 		{
 		string_filtre += 'element.' + type_act[i] + ' >0 ' ;
-		string_comment_act += 'inscriptions' + (val_autres_act === '== 0' ? " uniquement " : " au moins ") + 'à'
-			+ (lien_act_select === ' && ' ? " toutes les activités suivantes : " : " l'une des activités suivantes : ") + type_act[i];
+		string_comment_act += 'inscriptions' + 'à' + (lien_act_select === ' && ' ? " chacune des activités suivantes : " : " l'une des activités suivantes : ")
+			+ type_act[i];
 		}
 	 	else
 		{
@@ -263,6 +263,9 @@ if (document.getElementById('type_act_' + (i+1)).checked)
 		}			
 	}
 }
+
+string_comment_act += (val_autres_act === '== 0' ? " mais aucune autre activé." : " et peut-être d'autres activités.") ;
+	
 // si la chaine de filtre est non vide, on l'entoure de parenthèses pour isoler les éventuels liens logiques OR
 if (!(string_filtre === ''))
 {string_filtre = '(' + string_filtre + ')' ;}
@@ -293,16 +296,20 @@ if (string_filtre == '')
 		string_filtre += 'element.nb_tot_act' + ' <= ' + parseInt(slider.noUiSlider.get()[1]) ;	
 		}
 
+string_comment_nb_act = 'Nombre d\'inscriptions total compris entre ' + parseInt(slider.noUiSlider.get()[0]) + ' et ' + parseInt(slider.noUiSlider.get()[1]) + '.' ;
+
 // on traite maintenant le filtre bénévoles
 if (document.getElementById('bene_oui').checked)	
 {if (string_filtre == '')
 		{
 		string_filtre += 'element.bene' + ' > ' + '0' ;	
+		string_comment_nb_act = 'Au moins un membre de la famille bénévole.' ;
 		}
 	 	else
 		{
 		string_filtre += ' && ' ;
-		string_filtre += 'element.bene' + ' > ' + '0' ;		
+		string_filtre += 'element.bene' + ' > ' + '0' ;
+		string_comment_nb_act = 'Pas de membre de la famille bénévole.' ;
 		}
 }
 console.log(string_filtre) ;
