--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@ if (document.getElementById('bene_oui').checked)
 {if (string_filtre == '')
 		{
 		string_filtre += 'element.bene' + ' > ' + '0' ;	
-		string_comment_nb_act = 'Au moins un membre de la famille bénévole.' ;
+		string_comment_bene = 'Au moins un membre de la famille bénévole.' ;
 		}
 	 	else
 		{
 		string_filtre += ' && ' ;
 		string_filtre += 'element.bene' + ' > ' + '0' ;
-		string_comment_nb_act = 'Pas de membre de la famille bénévole.' ;
+		string_comment_bene = 'Pas de membre de la famille bénévole.' ;
 		}
 }
 console.log(string_filtre) ;
@@ -335,7 +335,7 @@ tableau_test = data.filter(function(element) {
 // si elle est nulle, on ne génère aucune carte
 console.log(tableau_test) ;
 document.getElementById('resume_requete').innerHTML = localStorage.getItem("comment_final_act")
-	+ '<br>/' + localStorage.getItem("comment_final_nb_act") + '<br>/' + localStorage.getItem("comment_bene");
+	+ '<br>' + localStorage.getItem("comment_final_nb_act") + '<br>' + localStorage.getItem("comment_final_bene");
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
 if (JSON.parse(localStorage.getItem("btn_click")) === false)
 	{  
