--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ if (document.getElementById('type_act_' + (i+1)).checked)
 	{if (string_filtre == '')
 		{
 		string_filtre += 'element.' + type_act[i] + ' >0 ' ;
-		string_comment_act += 'inscriptions' + 'à' + (lien_act_select === ' && ' ? " chacune des activités suivantes : " : " l'une des activités suivantes : ")
+		string_comment_act += 'Inscriptions' + ' à' + (lien_act_select === ' && ' ? " chacune des activités suivantes : " : " l'une des activités suivantes : ")
 			+ type_act[i];
 		}
 	 	else
