--- a/index.html
+++ b/index.html
@@ -134,9 +134,14 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 
 <!--on place un div de commentaire pour informer l'utilisateur de la requête envoyée et le nombre de données
 le texte du div est rempli une fois la requete connue -->
+<fieldset style= "border: red 1px solid #666;
+  border-radius: 8px">
+  <legend><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
+	
 <div id="resume_requete">
 
 </div>
+</fieldset>
 
 
 
