--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 
 <!--on place un div de commentaire pour informer l'utilisateur de la requête envoyée et le nombre de données
 le texte du div est rempli une fois la requete connue -->
-<fieldset style= "border:#FF0000 1px solid #666;
+<fieldset style= "border: 1px solid red;
   border-radius: 8px">
   <legend><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
 	
