--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ if (document.getElementById('type_act_' + (i+1)).checked)
 	}
 }
 
-string_comment_act += (val_autres_act === '== 0' ? " mais aucune autre activé." : " et peut-être d'autres activités.") ;
+string_comment_act += (val_autres_act === '== 0' ? " mais aucune autre activé." : " et éventuellement d'autres activités.") ;
 	
 // si la chaine de filtre est non vide, on l'entoure de parenthèses pour isoler les éventuels liens logiques OR
 if (!(string_filtre === ''))
