--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 le texte du div est rempli une fois la requete connue -->
 <fieldset style= "border: 1px solid red;
   border-radius: 8px; background-color: #F5B7B1">
-  <legend><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
+  <legend style="color:red"><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
 	
 <div id="resume_requete">
 
