--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ if (document.getElementById('type_act_' + (i+1)).checked)
 	}
 }
 
-if (string_comment != '')
+if (string_comment_act != '')
 {
 string_comment_act += (val_autres_act === '== 0' ? " mais aucune autre activé." : " et éventuellement d'autres activités.") ;
 }
