--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ string_comment_bene = '- Au moins un membre de la famille bénévole.' ;
 }
 else
 {
-string_comment_bene = '- Pas de membre de la famille bénévole.' ;
+string_comment_bene = '- Pas de filtre bénévole.' ;
 }
 console.log(string_filtre) ;
 localStorage.setItem("filtre_final", string_filtre ) ;
@@ -345,8 +345,10 @@ tableau_test = data.filter(function(element) {
 // on génère un test sur la longueur du tableau
 // si elle est nulle, on ne génère aucune carte
 console.log(tableau_test) ;
+
 document.getElementById('resume_requete').innerHTML = (localStorage.getItem("comment_final_act") === '' ? " - Aucun filtre sur les activités." : localStorage.getItem("comment_final_act"))
-	+ '<br>' + localStorage.getItem("comment_final_nb_act") + '<br>' + localStorage.getItem("comment_final_bene");
+	+ '<br>' + localStorage.getItem("comment_final_nb_act") + '<br>' + localStorage.getItem("comment_final_bene")
+	+ '<br>' + '<br>' + '- Nombre de familles obtenu : ' + tableau_test.length ;
 document.getElementById('resume_requete').style.color = 'red' ;
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
 if (JSON.parse(localStorage.getItem("btn_click")) === false)
