--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 	 
 // on insère les polygones dans le sens inverse pour avoir une frontière intérieure de la bonne couleur
     for (let i = points.length-1 ; i >= 0  ; i--) {
-    if (poly[i].length > 0)
+    if (poly[i].getLatLngs().length > 0)
     {
     poly[i].addTo(map_2);
     }
