--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     
     color_fr.forEach(function(element){
     var texte_zone ;
-    texte_zone = ( (color_fr.indexOf(element) < color_fr.length - 1) ? ' (moins de ' + bornes[color_fr.indexOf(element)+1] : ' (plus de ' + bornes[color_fr.indexOf(element)]) ;
+    texte_zone = ( (color_fr.indexOf(element) == 0) ? ' (moins de ' + bornes[color_fr.indexOf(element)+1] : (color_fr.indexOf(element) < color_fr.length - 1) ? ' (entre ' + bornes[color_fr.indexOf(element)] + ' et ' + bornes[color_fr.indexOf(element)+1] : ' (plus de ' + bornes[color_fr.indexOf(element)]) ;
     document.getElementById("comment_2").innerHTML = document.getElementById("comment_2").innerHTML + ' La surface ' + color_fr[color_fr.indexOf(element)]
 	    + texte_zone  + ' minutes de la 20ème Chaise) a une superficie de ' +
 	    Separateur_Milliers(Math.round(surface[color_fr.indexOf(element)])) +' mètres carrés' + ' et contient ' + PS[color_fr.indexOf(element)].length + ' adresses.'
