--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     var poly = new Array();
     var surface = new Array();
     var color = ['blue','green','yellow','orange','red'];
-    var color_fr = ['bleue','verte','jaune','orange','rouge',];
+    var color_fr = ['bleu','vert','jaune','orange','rouge',];
     var convexite = [1.000,1.000,1.000,1.000,1.000];
 	 
     PS.forEach(function(element)
