--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   
     <script>
   window.onload = function()
-    {
+    {   document.getElementById('resume_requete').innerHTML = "en attente des résultats..." ;
     	chargement_donnees();
         exemple1();
 	exemple2();
