--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
+    <script> document.getElementById('resume_requete').innerHTML = "en attente des résultats..." </script>
 
 </head>
 <body>
@@ -810,14 +811,13 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
   
     <script>
   window.onload = function()
-    {   document.getElementById('resume_requete').innerHTML = "en attente des résultats..." ;
+    {   
     	chargement_donnees();
         exemple1();
 	exemple2();
 	exemple3();
         localStorage.setItem("btn_click", false);
 	localStorage.setItem("filtre_final", '');
-
     }
     
  </script>
