--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
-    <script> document.getElementById('resume_requete').innerHTML = "en attente des résultats..." </script>
 
 </head>
 <body>
@@ -141,7 +140,7 @@ le texte du div est rempli une fois la requete connue -->
   <legend style="color:red"><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
 	
 <div id="resume_requete">
-
+En attente de la requête...
 </div>
 </fieldset>
 
