--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ le texte du div est rempli une fois la requete connue -->
   border-radius: 8px; background-color: #F5B7B1">
   <legend style="color:red"><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
 	
-<div id="resume_requete">
+<div id="resume_requete" style="color:red;">
 En attente de la requête...
 </div>
 </fieldset>
