--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ le texte du div est rempli une fois la requete connue -->
   <legend style="color:red"><b>Les résultats ci-dessous sont liés aux filtres suivants :</b></legend>
 	
 <div id="resume_requete" style="color:red;">
-En attente de la requête...
+En attente des résultats...
 </div>
 </fieldset>
 
