--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js"></script>
     <link rel="stylesheet" type="text/css" href="./stylesheets/slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.js"></script>
+    <script src="leaflet.geometryutil.js"></script>
 
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
