--- a/index.html
+++ b/index.html
@@ -574,9 +574,8 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     console.log(element.length) ;
     // on développe une autre approche via la construction du plus grand cercle contenant les points
     var rayon_max ;
-    var Ligne_Poly = L.polyline([element.lat, element.lng],[48.864891,2.389828]) ;
-    element.forEach(function(element)
-    { console.log(L.GeometryUtil.length(Ligne_Poly)) ;})
+    element.forEach(function(latlng)
+    { console.log(L.GeometryUtil.length(latlng,L.latlng[48.864891,2.389828])) ;})
 
     // on ajoute un test sur la longueur de la chaine
     // elle doit être au moins égale à 2 pour générer un polygone sans erreur
