--- a/index.html
+++ b/index.html
@@ -570,17 +570,9 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     element.forEach(function(latlng)
 		    {L.circleMarker(latlng, {radius: 2, color : color[PS.indexOf(element)]}).addTo(map_2);});
 
-    console.log(PS.length) ;
-    console.log(element.length) ;
-    // on développe une autre approche via la construction du plus grand cercle contenant les points
-    var rayon_max = 0 ;
-    var adresse_ref = L.latLng(48.864891,2.389828) ;
-    element.forEach(function(latlng)
-    { rayon_max = Math.max(rayon_max, L.GeometryUtil.length([map_2.latLngToLayerPoint(latlng),map_2.latLngToLayerPoint(adresse_ref)])) ;})
-    console.log(rayon_max) ;
     // on ajoute un test sur la longueur de la chaine
     // elle doit être au moins égale à 2 pour générer un polygone sans erreur
-    if (element.length > 2)
+    if (element.length < 0)
     {
     points[points.length]= hull(element, convexite[points.length], ['.lng', '.lat']);
     
@@ -605,7 +597,13 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     // cas où nombre de points inférieur ou égal à 2
     {
     poly[poly.length] = [] ;
-    surface[surface.length] = 0 ;   
+    surface[surface.length] = 0 ;
+    // on développe une autre approche via la construction du plus grand cercle contenant les points
+    var rayon_max = 0 ;
+    var adresse_ref = L.latLng(48.864891,2.389828) ;
+    element.forEach(function(latlng)
+    { rayon_max = Math.max(rayon_max, L.GeometryUtil.length([map_2.latLngToLayerPoint(latlng),map_2.latLngToLayerPoint(adresse_ref)])) ;})
+    var circle = L.circle([48.864891,2.389828], {weight: 2, color : color[poly.length], fillopacity : 0.9, radius: rayon_max}).addTo(map_2);
     }
     };
     
