--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 
     // on ajoute un test sur la longueur de la chaine
     // elle doit être au moins égale à 2 pour générer un polygone sans erreur
+    console.log(element.length) ;
     if (element.length < 0)
     {
     points[points.length]= hull(element, convexite[points.length], ['.lng', '.lat']);
