--- a/index.html
+++ b/index.html
@@ -584,7 +584,14 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     }
 		else
 		{
-		console.log('autre cas') ;
+		poly[poly.length] = [] ;
+    surface[surface.length] = 0 ;
+    // on développe une autre approche via la construction du plus grand cercle contenant les points
+    var rayon_max = 0 ;
+    var adresse_ref = L.latLng(48.864891,2.389828) ;
+    element.forEach(function(latlng)
+    { rayon_max = Math.max(rayon_max, L.GeometryUtil.length([map_2.latLngToLayerPoint(latlng),map_2.latLngToLayerPoint(adresse_ref)])) ;})
+    var circle = L.circle([48.864891,2.389828], {weight: 2, color : color[poly.length], fillopacity : 0.9, radius: rayon_max}).addTo(map_2);
 		}
     });
 	 
@@ -595,17 +602,9 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     poly[i].addTo(map_2);
     }
     else
-    // cas où nombre de points inférieur ou égal à 2
+    // cas où nombre de points égal à 0
     {
-    poly[poly.length] = [] ;
-    surface[surface.length] = 0 ;
-    // on développe une autre approche via la construction du plus grand cercle contenant les points
-    var rayon_max = 0 ;
-    var adresse_ref = L.latLng(48.864891,2.389828) ;
-    element.forEach(function(latlng)
-    { rayon_max = Math.max(rayon_max, L.GeometryUtil.length([map_2.latLngToLayerPoint(latlng),map_2.latLngToLayerPoint(adresse_ref)])) ;})
-    var circle = L.circle([48.864891,2.389828], {weight: 2, color : color[poly.length], fillopacity : 0.9, radius: rayon_max}).addTo(map_2);
-    console.log('hello') ;
+    
     }
     };
     
