--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 
 <p> - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
     à la 20ème Chaise par Google Map API <br>
-    - détermination des enveloppes convexes(-concaves) par algorithme externe
+ <s>- détermination des enveloppes convexes(-concaves) par algorithme externe </s>
 </p>
 	      
 	      
