--- a/index.html
+++ b/index.html
@@ -518,11 +518,11 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 <!-- Exemple 2 -->
 <h3><a name="ex2" class="anchor" ><span class="octicon octicon-link"></span>Temps de trajet à pied</a></h3>
 
-<pre> - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
+<p> - récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) <br>
          à la 20ème Chaise par Google Map API <br>
- <s>  - détermination des enveloppes convexes(-concaves) par algorithme externe </s> (laissé en suspens car non adapté aux petits groupes de points asymétriques) <br>
+ <s>  - détermination des enveloppes convexes(-concaves) par algorithme externe </s> &nbsp (laissé en suspens car non adapté aux petits groupes de points asymétriques) <br>
       - détermination des cercles correspondant à chaque zone
-</pre>
+</p>
 	      
 	      
 <p>
