--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
         }
 		   )
 	    
-    var circle = L.circle([48.864891,2.389828], {weight: 2, color : color[poly.length], fillopacity : 0.0, radius: rayon_max}).addTo(map_2);
+    var circle = L.circle([48.864891,2.389828], {weight: 2, color : color[poly.length], fillOpacity : 0.0, radius: rayon_max}).addTo(map_2);
 		}
     poly[poly.length] = [] ;
     surface[surface.length] = 0 ;
