--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 <label for="bene_oui">bénévole sur au moins un type d'activité</label>
 </div>
 </fieldset>
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
+<div>
+<input type="text"  id ="rayon_cercles_influence" name="saisie"/>
+<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres) : </label><br>
+</div>
+</fieldset>	
 	
 </fieldset>
 
