--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<input type="text"  id ="rayon_cercles_influence" name="saisie"/>
 <label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres) : </label><br>
+<input type="number"  id ="rayon_cercles_influence" name="saisie" value='750' min='100' max='1500' step='50'>
 </div>
 </fieldset>	
 	
