--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ tableau_test = data.filter(function(element) {
 document.getElementById('resume_requete').innerHTML = (localStorage.getItem("comment_final_act") === '' ? " - Aucun filtre sur les activités." : localStorage.getItem("comment_final_act"))
 	+ '<br>' + localStorage.getItem("comment_final_nb_act") + '<br>' + localStorage.getItem("comment_final_bene")
 	+ '<br>' + '- Nombre de familles obtenu : ' + tableau_test.length
-	+ '<br>' + localStorage.getItem("rayon_cercles") ;
+	+ '<br>' + ' - Rayon des cercles d\'influence des centres sociaux : ' + localStorage.getItem("rayon_cercles") + ' mètres' ;
 }
 // on génère un test sur la longueur du tableau
 // si elle est nulle, on ne génère aucune carte
@@ -708,7 +708,7 @@ function unify(polyList,color) {
 
 
     var layer_cercles_CS = L.layerGroup().addTo(map_3);
-    var radius = 750
+    var radius = localStorage.getItem("rayon_cercles") ;
     var opts = {parts: 144, fill : 'blue' , fillcolor : 'blue', fillOpacity : 0.9};
 
 var Layer_ZI_20C = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: 'black',weight: 1.5, opacity : 0.7, fill : true, fillColor : 'orange', fillOpacity : 0.5}}).addTo(map_3);
