--- a/index.html
+++ b/index.html
@@ -840,6 +840,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 	exemple3();
         localStorage.setItem("btn_click", false);
 	localStorage.setItem("filtre_final", '');
+	localStorage.setItem("rayon_cercles",'750') ;
     }
     
  </script>
