--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - on travaille au niveau familles et non au niveau individus <br>
     - on va étudier :  <br>
-    &nbsp - Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
+    &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
     &nbsp&nbsp aux quartiers de veille active et aux anciens quartiers de veille  <br>
-    &nbsp - Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
-    &nbsp - Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
+    &nbsp Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
+    &nbsp Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
 
 <fieldset style= "border: 1px solid #666;
