--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres) : </label><br>
+<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres) : </label>
 <input type="number"  id ="rayon_cercles_influence" name="saisie" value='750' min='100' max='1500' step='50'>
 </div>
 </fieldset>	
@@ -510,7 +510,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 };
 
  document.getElementById("comment_1").innerHTML = adresses_NQPV.features.length +
-	 ' adresses relèvent d\'un quartier NQPV (en noir).' + '<br/>' +
+	 ' adresses relèvent d\'un quartier NQPV (en noir).' + String.Format("Value: {0:P2}.", adresses_NQPV.features.length / adresses_turf.length ) + '<br/>' +
 	 adresses_QVA.features.length +
 	 ' adresses relèvent d\'un quartier QVA (en jaune).' + '<br/>' +
 	 adresses_AQV.features.length +
